canary/canary-blue.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: blue
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: blue
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: blue
  spec:
    replicas: 3
    selector:
      deploymentconfig: blue
    strategy:
      type: "Rolling"
    template:
      metadata:
        labels:
          deploymentconfig: blue
      spec:
        containers:
        - image: openshift/hello-openshift
          name: hello-openshift
          ports:
          - containerPort: 8080
            protocol: TCP
    triggers:
    - type: ConfigChange
