canary/canary-green.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: green
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: green
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: green
  spec:
    replicas: 3
    selector:
      deploymentconfig: green
    strategy:
      type: "Rolling"
    template:
      metadata:
        labels:
          deploymentconfig: green
      spec:
        containers:
        - image: openshift/hello-openshift
          name: hello-openshift
          ports:
          - containerPort: 8080
            protocol: TCP
    triggers:
    - type: ConfigChange
