canary/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: blue-green
spec:
  to:
    kind: Service
    name: blue
